fixed layout problems

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -136,6 +136,7 @@ body {
   margin: 2px;
   background: #FFFFFF;
   display: inline-block;
+  vertical-align:top;
 
   & > img{
     display: block;
